--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>equip-clone-features</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>HirKit - AI-Powered Interview Scheduling Platform</title>
+    <meta name="description" content="Transform your recruitment process with intelligent automation. Schedule interviews, track candidates, and streamline your hiring workflow with HirKit's AI-powered platform." />
+    <meta name="author" content="HirKit" />
 
-    <meta property="og:title" content="equip-clone-features" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="HirKit - AI-Powered Interview Scheduling Platform" />
+    <meta property="og:description" content="Transform your recruitment process with intelligent automation. Schedule interviews, track candidates, and streamline your hiring workflow with HirKit's AI-powered platform." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
 
-    <meta name="twitter:card" content="summary_large_image" />
+    <!-- <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
   </head>
 
   <body>
